--- a/WebApi/appsettings.json
+++ b/WebApi/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-EJL9033\\MSSQLSERVER1;Database=ABCHR;uid=sa;pwd=123;Trusted_Connection=True;MultipleActiveResultSets=True;TrustServerCertificate=True"
+    "DefaultConnection": ""
   },
   "Logging": {
     "LogLevel": {
