--- a/WebApi/appsettings.json
+++ b/WebApi/appsettings.json
@@ -2,6 +2,10 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=DESKTOP-EJL9033\\MSSQLSERVER1;Database=ABCHR;uid=sa;pwd=123;Trusted_Connection=True;MultipleActiveResultSets=True;TrustServerCertificate=True"
   },
+  "AppConfiguration": {
+    "Secret": "QFC!FBHYUIKZTDUMAZVFBGHYHJDDNDGHDJYSHT",
+    "TokenExpiryInMinutes" :  5
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
