Users business is completed

--- a/WebApi/appsettings.json
+++ b/WebApi/appsettings.json
@@ -1,10 +1,10 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": ""
+    "DefaultConnection": "Server=DESKTOP-EJL9033\\MSSQLSERVER1;Database=ABCHR;uid=sa;pwd=123;Trusted_Connection=True;MultipleActiveResultSets=True;TrustServerCertificate=True"
   },
   "AppConfiguration": {
     "Secret": "QFC!FBHYUIKZTDUMAZVFBGHYHJDDNDGHDJYSHT",
-    "TokenExpiryInMinutes" :  5
+    "TokenExpiryInMinutes" :  20
   },
   "Logging": {
     "LogLevel": {
