--- a/WebApi/appsettings.json
+++ b/WebApi/appsettings.json
@@ -1,9 +1,9 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-EJL9033\\MSSQLSERVER1;Database=ABCHR;uid=sa;pwd=123;Trusted_Connection=True;MultipleActiveResultSets=True;TrustServerCertificate=True"
+    "DefaultConnection": ""
   },
   "AppConfiguration": {
-    "Secret": "QFC!FBHYUIKZTDUMAZVFBGHYHJDDNDGHDJYSHT",
+    "Secret": "",
     "TokenExpiryInMinutes" :  20
   },
   "Logging": {
