--- a/Admin/wwwroot/appsettings.json
+++ b/Admin/wwwroot/appsettings.json
@@ -2,11 +2,11 @@
   "ApiEndpoints": {
     "BaseApiUrl": "https://localhost:7036/",
     "UserEndpoints": {
-      "Register": "api/user",
-      "GetById": "api/user/",
-      "GetAll": "api/user",
-      "Update": "api/user",
-      "ChangePassword": "api/user/change-password",
+      "Register": "api/user/create-user",
+      "GetById": "api/user/get-user",
+      "GetAll": "api/user/get-all-user",
+      "Update": "api/user/update-user",
+      "ChangePassword": "api/user/change-user-password",
       "ChangeStatus": "api/user/change-status",
       "GetRoles": "api/user/roles/",
       "UpdateRoles": "api/user/update-user-roles"
